--- a/threejs/tsconfig.json
+++ b/threejs/tsconfig.json
@@ -1,6 +1,7 @@
 {
-    "include": ["src", "js"],
+    "include": ["src", "Lib"],
     "compilerOptions": {
+        "allowJs": true,
         /* Visit https://aka.ms/tsconfig to read more about this file */
 
         /* Projects */
@@ -30,7 +31,7 @@
 
         /* Modules */
         "module": "es6" /* Specify what module code is generated. */,
-        // "rootDir": "./",                                  /* Specify the root folder within your source files. */
+        //"rootDir": "./" /* Specify the root folder within your source files. */,
         "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
         // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
         // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
